; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/extr_serverstask.c_servers_set_timeout.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/extr_serverstask.c_servers_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@SERVERS_MIN_TIMEOUT_MS = common dso_local global i64 0, align 8
@mpexception_value_invalid_arguments = common dso_local global i32 0, align 4
@servers_data = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @servers_set_timeout(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @SERVERS_MIN_TIMEOUT_MS, align 8
  %5 = icmp slt i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32, i32* @mpexception_value_invalid_arguments, align 4
  %8 = call i32 @mp_raise_ValueError(i32 %7)
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i64, i64* %2, align 8
  store i64 %10, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @servers_data, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @mp_raise_ValueError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
